# loki-lib

./: .gitignore  AUTHORS  AbstractFactory-jj.h  AbstractFactory.h  CHANGES  COPYING  ChangeLog  EmptyType-jj.h  Factory-jj.h  Functor-jj.h  Loki.sln  Loki_MSVC_8.sln  Makefile  Makefile-debian  Makefile.am  MultiMethods-jj.h  NullType-jj.h  README  Singleton-jj.cpp  Singleton-jj.h  SmallObj-jj.cpp  SmallObj-jj.h  SmartPtr-jj.h  Threads-jj.h  TypeInfo-jj.h  TypeList-jj.h  TypeManip-jj.h  TypeTraits-jj.h  Typelist.h  build-on-maxosx.sh  ch01test.cpp  ch02test.cpp  ch03test.cpp  ch04test.cpp  ch05test.cpp  ch06test.cpp  ch07test.cpp  ch08test.cpp  ch09test.cpp  ch11test.cpp  (+11 more)
Borland/CVS/: Entries  Repository
CVS/: Entries  Repository
MSVC/1200/: Functor.h  Readme.txt  SmartPtr.h
MSVC/1300/: Singleton.h
MSVC/CVS/: Entries  Repository
Reference/: 【C++經典著作】Modern C++ Design：Generic Programming and Design Patterns Applied.epub
Reference/CVS/: Entries  Repository
debian/: changelog  control  rules
doc/: Doxyfile
doc/doxygen/: _START_HERE.html  a00015.html  a00049.html  a00050.html  a00051.html  a00102.html  a00104.html  a00105.html  a00162.html  a00163.html  a00164.html  a00166.html  a00167.html  a00168.html  a00170.html  a00171.html  a00172.html  a00173.html  a00174.html  a00175.html  a00179.html  a00181.html  a00182.html  a00183.html  a00184.html  a00185.html  a00186.html  a00187.html  a00188.html  a00189.html  a00190.html  a00191.html  a00194.html  a00195.html  a00197.html  a00198.html  a00199.html  a00200.html  a00201.html  a00202.html  (+284 more)
include/: Makefile.am
include/FerrisLoki/: Makefile.am
include/loki/: AbstractFactory.h  AssocVector.h  DataGenerators.h  Factory.h  Functor.h  MultiMethods.h  OrderedStatic.h  SafeFormat.h  Sequence.h  Singleton.h  SmallObj.h  SmartPtr.h  Threads.h  TypeTraits.h  Visitor.h
macros/: ferrismacros.m4
smart_ptr/: smart_ptr.vcproj
src/: BoostExtensions.hh  Extensions.cpp  Extensions.hh  Library_MSVC_8.ncb  Library_MSVC_8.vcproj  Makefile  Makefile.am  OrderedStatic.cpp  SafeFormat.cpp  Singleton.cpp  SmallObj.cpp  SmartPtr.cpp  StrongPtr.cpp  make.msvc.bat  make.msvc.dll.bat
test/: Makefile  make.msvc.bat
test/DeletableSingleton/: DeletableSingleton.cpp  Makefile  make.msvc.bat
test/Factory/: Factory.cpp  Factory.dev  Makefile  make.msvc.bat
test/Function/: Function.vcproj  FunctionTest.cpp  Function_MSVC_8.vcproj  Makefile
test/LockingPtr/: LockingPtr.vcproj  Makefile  Thread.h  main.cpp  make.msvc.bat
test/Longevity/: Makefile  Makefile2  main.cpp  main2.cpp  make.msvc.bat
test/OrderedStatic/: Makefile  main.cpp  make.msvc.bat
test/Pimpl/: Pimpl.vcproj  main.cpp  type.h  type2.h
test/Register/: Makefile  Register.sln  classlist.h  foo.cpp  foo.h  foo.vcproj  main.cpp  main.vcproj
test/RegressionTest/: AbstractFactoryTest.h  AssocVectorTest.h  FactoryTest.h  FunctorTest.h  Makefile  SequenceTest.h  SmallObjectTest.h  SmartPtrTest.h  Test.cpp  TypeTraitsTest.h  TypeTraitsTest2.h  TypelistTest.h  make.msvc.bat
test/SafeFormat/: Makefile  main.cpp  make.msvc.bat
test/ScopeGuard/: main.cpp  make.msvc.bat
test/Singleton/: DeletableSingleton.cpp  Dependencies.cpp  Makefile  Makefile-DeletableSingleton  Makefile-Dependencies  Makefile-Phoenix  Phoenix.cpp  make.msvc.bat
test/SingletonDll/: Makefile  SingletonDll.sln  foo.cpp  (+7 more)
tests/: Simulate_PS.cpp  Test_Singleton.cpp  Test_SmartPtr.cpp  Test_TypeList.cpp
teststrongptr/: importantconst.cpp  reference.cpp  teststrongptr.cpp  teststrongptr.vcproj
yasli/: yasli.vcproj
(+199 files in other folders)
